Update image path in 1.md to use local asset

--- a/content/1.md
+++ b/content/1.md
@@ -5,7 +5,7 @@ Status (Draft or Publish): Publish
 
 # 🎉 12月がスタートしました！プログラマーたちの新たな冒険へ
 
-![image](https://github.com/user-attachments/assets/8346c2bc-ab16-48c8-bbcb-ec677d947129)
+![image](img/1-1.jpg)
 
 *冬の雪景色と暖かいコーディング環境*
 
